--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://Jaliko05.github.io/Portafolio",
   "scripts": {
     "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "deploy":"gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
